[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hollow-knight-bot"
version = "0.1.0"
description = "A Discord bot for tracking Hollow Knight progress"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
